demo/canary/servicemesh/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollouts-demo-vsvc1
spec:
  gateways:
  - rollouts-demo-gateway
  hosts:
  - rollout-app-dev.apps.cluster-g9w5w.g9w5w.sandbox1118.opentlc.com
  http:
  - name: primary
    # match:
    #   - uri:
    #       prefix: /rollout-app
    # rewrite:
    #   uri: /
    route:
    - destination:
        host: rollouts-demo-stable
        port:
          number: 80
      weight: 100
    - destination:
        host: rollouts-demo-canary
        port:
          number: 80
      weight: 0
  # tls:
  # - match:
  #   - port: 3000
  #     sniHosts:
  #     - reviews.bookinfo.com
  #     - localhost
  #   route:
  #   - destination:
  #       host: rollouts-demo-stable
  #     weight: 100
  #   - destination:
  #       host: rollouts-demo-canary
  #     weight: 0

# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: rollouts-demo-vsvc2
# spec:
#   gateways:
#   - rollouts-demo-gateway
#   hosts:
#   - rollout-app.apps.sno-local.phybernet.org
#   http:
#   - name: secondary
#     # match:
#     #   - uri:
#     #       prefix: /rollout-app
#     # rewrite:
#     #   uri: /
#     route:
#     - destination:
#         host: rollouts-demo-stable
#         port:
#           number: 80
#       weight: 100
#     - destination:
#         host: rollouts-demo-canary
#         port:
#           number: 80
#       weight: 0
#   # tls:
#   # - match:
#   #   - port: 3000
#   #     sniHosts:
#   #     - reviews.bookinfo.com
#   #     - localhost
#   #   route:
#   #   - destination:
#   #       host: rollouts-demo-stable
#   #     weight: 100
#   #   - destination:
#   #       host: rollouts-demo-canary
#   #     weight: 0
